# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.101 2010/10/08 12:22:53 nelchael Exp $

*tuxonice-sources-2.6.35-r5 (08 Oct 2010)

  08 Oct 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.35-r5.ebuild:
  Revision bump for new genpatches.

*tuxonice-sources-2.6.35-r4 (30 Sep 2010)
*tuxonice-sources-2.6.34-r7 (30 Sep 2010)
*tuxonice-sources-2.6.32-r18 (30 Sep 2010)

  30 Sep 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.32-r18.ebuild, +tuxonice-sources-2.6.34-r7.ebuild,
  +tuxonice-sources-2.6.35-r4.ebuild:
  Revision bumps for new genpatches.

*tuxonice-sources-2.6.35-r3 (17 Sep 2010)
*tuxonice-sources-2.6.34-r6 (17 Sep 2010)
*tuxonice-sources-2.6.32-r17 (17 Sep 2010)

  17 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -tuxonice-sources-2.6.32-r16.ebuild, +tuxonice-sources-2.6.32-r17.ebuild,
  -tuxonice-sources-2.6.34-r5.ebuild, +tuxonice-sources-2.6.34-r6.ebuild,
  -tuxonice-sources-2.6.35-r2.ebuild, +tuxonice-sources-2.6.35-r3.ebuild:
  Revbump kernels one more time since upstream suck alot and dont return 404
  but some http code so on mirrors there are broken patch files, and ebuild
  does not die. (i tested with already fetched source, but for commit i use
  different machine :/)

*tuxonice-sources-2.6.35-r2 (17 Sep 2010)
*tuxonice-sources-2.6.34-r5 (17 Sep 2010)
*tuxonice-sources-2.6.32-r16 (17 Sep 2010)

  17 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -tuxonice-sources-2.6.30-r6.ebuild, -tuxonice-sources-2.6.30-r11.ebuild,
  -tuxonice-sources-2.6.30-r12.ebuild, -tuxonice-sources-2.6.30-r13.ebuild,
  -tuxonice-sources-2.6.31-r11.ebuild, -tuxonice-sources-2.6.31-r12.ebuild,
  -tuxonice-sources-2.6.31-r13.ebuild, -tuxonice-sources-2.6.32-r7.ebuild,
  -tuxonice-sources-2.6.32-r8.ebuild, -tuxonice-sources-2.6.32-r9.ebuild,